[gd_scene load_steps=6 format=3 uid="uid://d1ujehnajda3m"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_qgmqp"]
[ext_resource type="Texture2D" uid="uid://7e65cyr3dbdw" path="res://Assets/Pigs_3.png" id="2_eqhsk"]
[ext_resource type="Texture2D" uid="uid://dlpexss04uh4d" path="res://Assets/Pigs_5.png" id="3_0ofvv"]
[ext_resource type="Texture2D" uid="uid://cyu4gywf6h83k" path="res://Assets/Pigs_1.png" id="4_yuss8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tjmg"]
size = Vector2(285, 1)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_qgmqp")

[node name="PigA" type="Sprite2D" parent="."]
texture = ExtResource("4_yuss8")

[node name="PigB" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_eqhsk")

[node name="PigC" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_0ofvv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -131.5)
shape = SubResource("RectangleShape2D_5tjmg")
